--- a/src/DEBYE/Makefile
+++ b/src/DEBYE/Makefile
@@ -1,5 +1,7 @@
 
 
+PREFIX  ?= /usr/local
+
 FORTRAN ?= gfortran
 CFLAGS  ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
 FJSON   ?= -I/home/bruce/git/feff85exafs/src/json-fortran -J/home/bruce/git/feff85exafs/src/json-fortran
@@ -7,6 +9,7 @@ AR      ?= ar
 ARFLAGS ?= rvc
 RANLIB  ?= ranlib
 RM      ?= rm
+COPY    ?= cp -v
 
 objects = sigcl.o  sigm3.o  sigms.o  sigrem.o  sigte3.o
 
@@ -42,4 +45,12 @@ sigrem.o:	sigrem.f ../HEADERS/parallel.h
 clean:
 	$(RM) *.a *.o
 
-.PHONEY:	clean all
+INSTARCH = @echo "Nothing to install in DEBYE"
+ifdef INSTALL_ARCHIVES
+INSTARCH = $(COPY) libfeffdw.a $(PREFIX)/lib
+endif
+
+install:
+	$(INSTARCH)
+
+.PHONEY:	clean all install
