--- a/src/PAR/Makefile
+++ b/src/PAR/Makefile
@@ -2,8 +2,7 @@
 PREFIX  ?= /usr/local
 
 FORTRAN ?= gfortran
-CFLAGS  ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
-FJSON   ?= -I/home/bruce/git/feff85exafs/src/json-fortran -J/home/bruce/git/feff85exafs/src/json-fortran
+FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
 AR      ?= ar
 ARFLAGS ?= rvc
 RANLIB  ?= ranlib
@@ -22,11 +21,7 @@ sequential.o:	sequential.f ../HEADERS/parallel.h
 #parallel.o:	parallel.f   ../HEADERS/parallel.h mpif.h
 
 %.o:	%.f
-	$(FORTRAN) $(CFLAGS) -o $@ $<
-
-#%.os:	%.f
-#	$(FORTRAN) $(CFLAGS) -o $@ $<
-
+	$(FORTRAN) $(FCFLAGS) -o $@ $<
 
 
 clean:
