--- a/wrappers/fortran/Makefile
+++ b/wrappers/fortran/Makefile
@@ -1,4 +1,15 @@
-PREFIX  = /usr/local
+
+## on linux, /usr/local/lib should be in the load path already.  elsewhere, you may need to set this
+#LDPATH = -I/usr/local/lib
+LDPATH = 
+
+#########################################################################################
+# if using this option, run the programs as 					        #
+#   LD_LIBRARY_PATH="../../src/GENFMT:../../src/POT:../../src/json-fortran" ./makepotph #
+#   LD_LIBRARY_PATH="../../src/GENFMT:../../src/POT:../../src/json-fortran" ./makepath  #
+#########################################################################################
+#LDPATH = -L../../src/GENFMT -L../../src/POT -L../../src/json-fortran
+
 
 FORTRAN = gfortran
 FCFLAGS = -c -g
@@ -6,10 +17,10 @@ FCFLAGS = -c -g
 all:	makepotph makepath
 
 makepotph:	makepotph.o
-	$(FORTRAN) -o $@ $< -lpotph -ljsonfortran
+	$(FORTRAN) -o $@ $< $(LDPATH) -lpotph -ljsonfortran
 
 makepath:	makepath.o
-	$(FORTRAN) -o $@ $< -lonepath
+	$(FORTRAN) -o $@ $< $(LDPATH) -lonepath
 
 %.o:	%.f
 	$(FORTRAN) $(FCFLAGS) -o $@ $<
