--- a/src/COMMON/Makefile
+++ b/src/COMMON/Makefile
@@ -1,6 +1,7 @@
 
 
 PREFIX  ?= /usr/local
+LIBDIR  ?= $(PREFIX)/lib
 
 FORTRAN ?= gfortran
 FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
@@ -42,7 +43,7 @@ clean:
 
 INSTARCH = @echo "Nothing to install in COMMON"
 ifdef INSTALL_ARCHIVES
-INSTARCH = $(COPY) libfeffcom.a $(PREFIX)/lib
+INSTARCH = $(COPY) libfeffcom.a $(LIBDIR)
 endif
 
 install:
