--- a/src/DEBYE/Makefile
+++ b/src/DEBYE/Makefile
@@ -1,6 +1,7 @@
 
 
 PREFIX  ?= /usr/local
+LIBDIR  ?= $(PREFIX)/lib
 
 FORTRAN ?= gfortran
 FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
@@ -46,7 +47,7 @@ clean:
 
 INSTARCH = @echo "Nothing to install in DEBYE"
 ifdef INSTALL_ARCHIVES
-INSTARCH = $(COPY) libfeffdw.a $(PREFIX)/lib
+INSTARCH = $(COPY) libfeffdw.a $(LIBDIR)
 endif
 
 install:
