--- a/src/FOVRG/Makefile
+++ b/src/FOVRG/Makefile
@@ -1,6 +1,7 @@
 
 
 PREFIX  ?= /usr/local
+LIBDIR  ?= $(PREFIX)/lib
 
 FORTRAN ?= gfortran
 FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
@@ -48,7 +49,7 @@ clean:
 
 INSTARCH = @echo "Nothing to install in FOVRG"
 ifdef INSTALL_ARCHIVES
-INSTARCH = $(COPY) libfeffpha.a $(PREFIX)/lib
+INSTARCH = $(COPY) libfeffpha.a $(LIBDIR)
 endif
 
 install:
