--- a/src/PAR/Makefile
+++ b/src/PAR/Makefile
@@ -1,5 +1,6 @@
 
 PREFIX  ?= /usr/local
+LIBDIR  ?= $(PREFIX)/lib
 
 FORTRAN ?= gfortran
 FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
@@ -29,7 +30,7 @@ clean:
 
 INSTARCH = @echo "Nothing to install in PAR"
 ifdef INSTALL_ARCHIVES
-INSTARCH = $(COPY) libfeffpar.a $(PREFIX)/lib
+INSTARCH = $(COPY) libfeffpar.a $(LIBDIR)
 endif
 
 install:
