--- a/src/FMS/Makefile
+++ b/src/FMS/Makefile
@@ -1,6 +1,7 @@
 
 
 PREFIX  ?= /usr/local
+LIBDIR  ?= $(PREFIX)/lib
 
 FORTRAN ?= gfortran
 FCFLAGS ?= -c -O3 -ffree-line-length-none -g -Wall -fPIC
@@ -43,7 +44,7 @@ clean:
 
 INSTARCH = @echo "Nothing to install in FMS"
 ifdef INSTALL_ARCHIVES
-INSTARCH = $(COPY) libfefffms.a $(PREFIX)/lib
+INSTARCH = $(COPY) libfefffms.a $(LIBDIR)
 endif
 
 install:
